--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -2,3 +2,11 @@
 {
     margin-bottom: 32px;
 }
+
+.loader
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
